; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/alpha/kernel/extr_core_mcpcia.c_mcpcia_write_config.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/alpha/kernel/extr_core_mcpcia.c_mcpcia_write_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_bus = type { %struct.pci_controller* }
%struct.pci_controller = type { i32 }

@PCIBIOS_DEVICE_NOT_FOUND = common dso_local global i32 0, align 4
@PCIBIOS_SUCCESSFUL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pci_bus*, i32, i32, i32, i32)* @mcpcia_write_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mcpcia_write_config(%struct.pci_bus* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.pci_bus*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.pci_controller*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i8, align 1
  store %struct.pci_bus* %0, %struct.pci_bus** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %15 = load %struct.pci_bus*, %struct.pci_bus** %7, align 8
  %16 = getelementptr inbounds %struct.pci_bus, %struct.pci_bus* %15, i32 0, i32 0
  %17 = load %struct.pci_controller*, %struct.pci_controller** %16, align 8
  store %struct.pci_controller* %17, %struct.pci_controller** %12, align 8
  %18 = load %struct.pci_bus*, %struct.pci_bus** %7, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* %9, align 4
  %21 = load %struct.pci_controller*, %struct.pci_controller** %12, align 8
  %22 = call i64 @mk_conf_addr(%struct.pci_bus* %18, i32 %19, i32 %20, %struct.pci_controller* %21, i64* %13, i8* %14)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %5
  %25 = load i32, i32* @PCIBIOS_DEVICE_NOT_FOUND, align 4
  store i32 %25, i32* %6, align 4
  br label %43

26:                                               ; preds = %5
  %27 = load i32, i32* %10, align 4
  %28 = sub nsw i32 %27, 1
  %29 = mul nsw i32 %28, 8
  %30 = sext i32 %29 to i64
  %31 = load i64, i64* %13, align 8
  %32 = or i64 %31, %30
  store i64 %32, i64* %13, align 8
  %33 = load i32, i32* %11, align 4
  %34 = load i32, i32* %9, align 4
  %35 = and i32 %34, 3
  %36 = call i32 @__kernel_insql(i32 %33, i32 %35)
  store i32 %36, i32* %11, align 4
  %37 = load i64, i64* %13, align 8
  %38 = load i32, i32* %11, align 4
  %39 = load i8, i8* %14, align 1
  %40 = load %struct.pci_controller*, %struct.pci_controller** %12, align 8
  %41 = call i32 @conf_write(i64 %37, i32 %38, i8 zeroext %39, %struct.pci_controller* %40)
  %42 = load i32, i32* @PCIBIOS_SUCCESSFUL, align 4
  store i32 %42, i32* %6, align 4
  br label %43

43:                                               ; preds = %26, %24
  %44 = load i32, i32* %6, align 4
  ret i32 %44
}

declare dso_local i64 @mk_conf_addr(%struct.pci_bus*, i32, i32, %struct.pci_controller*, i64*, i8*) #1

declare dso_local i32 @__kernel_insql(i32, i32) #1

declare dso_local i32 @conf_write(i64, i32, i8 zeroext, %struct.pci_controller*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
